--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate-api": "openapi-typescript $NEXT_PUBLIC_API_URL/docs/api.json -o ./src/lib/api/v1.d.ts"
+    "generate-api": "openapi-typescript https://admin.workevent.ru/docs/api.json -o ./src/lib/api/v1.d.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
