--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "react-hook-form": "^7.53.2",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "transliteration": "^2.3.5",
     "yet-another-react-lightbox": "^3.21.7",
     "zod": "^3.23.8"
   },
