--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tooltip": "^1.1.5",
     "@tabler/icons": "^3.21.0",
     "@tabler/icons-react": "^3.24.0",
+    "@vercel/speed-insights": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
