--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "generate-api": "openapi-typescript https://admin.workevent.ru/docs/api.json -o ./src/lib/api/v1.d.ts"
@@ -31,6 +32,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
     "next": "^15.1.0",
+    "next-sitemap": "^4.2.3",
     "openapi-fetch": "^0.13.3",
     "react": "^19.0.0",
     "react-day-picker": "^8",
