--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.468.0",
     "next": "^15.1.0",
     "next-sitemap": "^4.2.3",
+    "nextjs-toploader": "^3.7.15",
     "openapi-fetch": "^0.13.3",
     "react": "^19.0.0",
     "react-day-picker": "^8",
