--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-hook-form": "^7.54.1",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
+    "schema-dts": "^1.1.2",
     "slugify": "^1.6.6",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
