--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@mdx-js/mdx": "^3.1.0",
     "@next/bundle-analyzer": "^15.1.5",
+    "@next/third-parties": "^15.1.5",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
@@ -40,6 +41,7 @@
     "react-day-picker": "^9.5.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-share": "^5.1.2",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "remove-markdown": "^0.6.0",
