--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
+    "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.473.0",
+    "mapbox-gl": "^3.9.3",
     "next": "^15.1.5",
     "next-sitemap": "^4.2.3",
     "nextjs-toploader": "^3.7.15",
@@ -41,6 +43,7 @@
     "react-day-picker": "^9.5.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-map-gl": "^7.1.8",
     "react-share": "^5.1.2",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
