--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": ["./src/*"],
+      "ymaps3": ["./node_modules/@yandex/ymaps3-types"]
+    },
+    "typeRoots": ["./node_modules/@types", "./node_modules/@yandex/ymaps3-types"],
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next-sitemap.config.js", "src/lib/globalUtils.js", "src/app/schedule/[year]"],
   "exclude": ["node_modules"]
