--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/postcss": "^4.1.16",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.10.7",
     "@types/react": "^19.0.7",
@@ -66,7 +67,7 @@
     "eslint-config-next": "^15.1.5",
     "openapi-typescript": "^7.5.2",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.16",
     "typescript": "^5.7.3"
   }
 }
